--- a/style.css
+++ b/style.css
@@ -1,29 +1,3 @@
-/*// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-
-.hanken-grotesk-<uniquifier> {
-  font-family: "Hanken Grotesk", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}
-## Colors
-### Primary
-- Light red: hsl(0, 100%, 67%)
-- Orangey yellow: hsl(39, 100%, 56%)
-- Green teal: hsl(166, 100%, 37%)
-- Cobalt blue: hsl(234, 85%, 45%)
-## Gradients
-- Light slate blue (background): hsl(252, 100%, 67%)
-- Light royal blue (background): hsl(241, 81%, 54%)
-- Violet blue (circle): hsla(256, 72%, 46%, 1)
-- Persian blue (circle): hsla(241, 72%, 46%, 0)
-### Neutral
-- White: hsl(0, 0%, 100%)
-- Pale blue: hsl(221, 100%, 96%)
-- Light lavender: hsl(241, 100%, 89%)
-- Dark gray blue: hsl(224, 30%, 27%)
-*/
 main {
     display: flex;
     flex-wrap: wrap;
@@ -31,8 +5,9 @@ main {
     align-items: center;
     min-height: 100vh;
     font-family: "Hanken Grotesk", sans-serif;
-    font-size: 18;
+    font-size: 16px;
 }
+
 .frame {
     max-width: 307px;
     height: 425px;
@@ -42,8 +17,8 @@ main {
     -webkit-box-shadow: 10px 12px 13px 4px rgba(200, 199, 255, 0.3);
     -moz-box-shadow: 10px 12px 13px 4px rgba(200, 199, 255, 0.3);
     box-shadow: 10px 12px 13px 4px rgba(200, 199, 255, 0.3);
-
 }
+
 .leftpanel {
     color: hsla(0, 0%, 100%, 75%);
     background: linear-gradient(180deg, hsla(252, 100%, 67%, 1), hsla(241, 81%, 54%, 1));
@@ -54,9 +29,24 @@ main {
     align-items: center;
     justify-content: center;
     border-radius: 20px 20px;
-
-
+    gap: 1rem;
 }
+
+.leftpanel p {
+    max-width: 75%;
+    text-align: center;  
+    margin: 0; 
+}
+
+.leftpanel h1 {
+    color: white;
+    margin: 0;
+}
+
+.leftpanel h2 {
+    margin: 0;
+}
+
 .rightpanel {
     background-color: white;
     width: 307px;
@@ -71,14 +61,16 @@ main {
     -webkit-box-shadow: 10px 12px 13px 4px rgba(200, 199, 255, 0.3);
     -moz-box-shadow: 10px 12px 13px 4px rgba(200, 199, 255, 0.3);
     box-shadow: 10px 12px 13px 4px rgba(200, 199, 255, 0.3);
-
-
 }
-.rightpanel h2 {    
+
+.rightpanel h2 {  
+    font-size: 22px;
+    font-weight: 700;  
     text-align: left;
     align-self: flex-start;
-    margin-left: 2rem;
+    margin: 0 0 0 2rem;
 }
+
 .score {
     background: linear-gradient(180deg, hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
     height: 160px;
@@ -89,67 +81,71 @@ main {
     align-items: center;
     justify-content: center;
 }
+
 .bigscore {
     color: white;
     font-size: 4rem;
     font-weight: 700;
 }
-.leftpanel p {
-    max-width: 75%;
-    text-align: center;   
-}
-.leftpanel h1 {
-    color: white;
-    margin: rem;
-}
-.summary{
+
+.summary {
     height: 75%;
     width: 100%; 
 }
+
 .summarySection {
     display: flex;
     justify-content: left;
     align-items: center;
     gap: .5rem;
 }
+
 .summaryResult {
     align-items: right;
     color: gray;
 }
+
 .summaryScore {
     color: black;
     font-weight: 900;
 }
+
 .reaction {
     color: hsl(0, 100%, 67%);
     background-color: hsl(0, 100%, 67%, 7%);
 }
+
 .memory {
     color: hsl(39, 100%, 56%);
     background-color: hsl(39, 100%, 56%, 7%);
 }
+
 .verbal {
     color: hsl(166, 100%, 37%);
     background-color: hsl(166, 100%, 37%, 7%);
 }
+
 .visual {
     color: hsl(234, 85%, 45%);
     background-color: hsl(234, 85%, 45%, 7%);
 }
+
 .continue {
     color: white;
     font-family: "Hanken Grotesk", sans-serif;
-    font-size: 18;
+    font-size: 16px;
     background-color: hsl(224, 30%, 27%);
     height: 10%;
     width: 75%;
-    border-radius: 20px;
+    border-radius: 40px;
     border: none;
 }
+
 .continue:hover{
     background: linear-gradient(180deg, hsla(252, 100%, 67%, 1), hsla(241, 81%, 54%, 1));
     cursor: pointer;
 }
+
 .summaryPart {
     font-weight: 700;
     height: 10%;
@@ -157,9 +153,76 @@ main {
     display: flex;
     align-items: center;
     justify-content:space-around;
-    border-radius: 5px;
+    border-radius: 10px 10px;
     gap: 2rem;
 }
+
 .attribution {
     display: none;
+}
+
+@media (max-width: 615px) {
+    main {
+        font-size: 16px;
+    }
+
+    .frame {
+        box-shadow:none; 
+        max-width: 100%;
+        height: 355px;
+    }
+
+    .leftpanel {
+        max-width: 100%;
+        height: 355px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        margin: 0;
+        justify-content: center;
+        gap: 5%;
+    }
+
+    .leftpanel h1 {
+        margin: 0;
+        font-size: 26px;
+        font-weight: 500;
+    }
+
+    .leftpanel h2 {
+        margin: 0;
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+    .leftpanel p {
+        margin: 0;  
+    }
+
+    .rightpanel {
+        box-shadow:none;
+        width: 100%;
+        height: 454px;
+        justify-content:center;
+        gap: 1.2rem;
+    }
+
+    .rightpanel h2 {    
+        margin: 0 0 0 2rem;
+        font-size: 20px;
+    }
+
+    .score {
+        height: 145px;
+        width: 145px;
+    }
+
+    .summaryPart {
+        width: 85%; 
+        height: 55px;
+    }
+
+    .continue {
+        width: 85%; 
+        height: 55px;
+    }
 }
